--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,18 @@
 <div class="container">
   <div class="row">
-    <button (click)="onRandom()" class="btn btn-primary">Click to run random</button>
+    <button (click)="onRandom()" class="btn btn-primary mb-3">Click to run random</button>
     <div class="col-sm-12 col-md-4">
+      <p class="text-end">Phần trăm lãi mong muốn:</p>
+    </div>
+    <div class="col-sm-12 col-md-2">
+      <input [(ngModel)]="percentTarget" type="number" class="form-control" placeholder="Phần trăm lãi" step="5" min="0" max="100">
+    </div>
+    <div class="col-sm-12 col-md-2">
+      <button (click)="onCalculate()" class="btn btn-primary mb-3">Tính bảng cân</button>
+    </div>
+  </div>
+  <div class="row">
+    <!-- <div class="col-sm-12 col-md-3">
       <p class="text-center text-primary fs-3">Bảng đầu vào</p>
       <p>Số - Tiền thu về - Tiền bù nếu trúng</p>
       <ul>
@@ -11,8 +22,53 @@
           </p>
         </li>
       </ul>
+    </div> -->
+    <div class="col-sm-12 col-md-12">
+      <p class="text-center text-success fs-3">
+        Tổng vào / Tiền lãi: {{totalIn | currency:'VND':'symbol':'1.0-0'}} / {{totalIn*percentTarget/100 | currency:'VND':'symbol':'1.0-0'}}
+      </p>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Số</th>
+            <th scope="col">Tiền thu</th>
+            <th scope="col">Tiền đền</th>
+            <th scope="col">Tiền lãi nếu về</th>
+            <th scope="col">Tiền chuyển</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of result; let index=index" [ngClass]="{'table-danger': item.isLai < 0, 'table-success': item.isLai > 0, 'table-warning': item.isLai == 0}">
+            <th scope="row">
+              <span class="number">
+                {{index}}
+              </span>
+            </th>
+            <td>
+              <span class="number">
+                {{item.tienThu | number: '1.0-0'}}
+              </span>
+            </td>
+            <td>
+              <span class="number">
+                {{item.tienDen | number: '1.0-0'}}
+              </span>
+            </td>
+            <td>
+              <span class="number">
+                {{item.tienLaiNeuVe | number: '1.0-0'}}
+              </span>
+            </td>
+            <td>
+              <span class="number">
+                {{item.diemChuyen | number: '1.0-0'}}
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="col-sm-12 col-md-4">
+    <!-- <div class="col-sm-12 col-md-4">
       <p class="text-center text-warrning fs-3">Số nguy cơ</p>
       <p>Số - Tiền thu về - Tiền bù nếu trúng</p>
       <ul>
@@ -25,6 +81,6 @@
     </div>
     <div class="col-sm-12 col-md-4">
       <p class="text-center text-success fs-3">Tổng vào: {{totalIn | currency:'VND':'symbol':'1.0-0'}}</p>
-    </div>
+    </div> -->
   </div>
 </div>
